tests/paczka1/small_fuzzy/92897856.err
Error in line 10: qGHIY S506 76,5
Error in line 13: beoRHeK8e S506 48,6
